# socratic_tutor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/socratic/: __init__.py  cli.py  engine.py  models.py  progress.py  prompts.py  tutor.py
src/socratic/agents/: __init__.py  context.py  evaluation.py  teaching.py
src/socratic/providers/: __init__.py
tests/: test_core.py
